# nanofile

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.ci  LICENSE  README.md  build.rs  config.toml
base/: Cargo.toml
base/src/: common.rs  error.rs  lib.rs  sanitize.rs
infra/: Cargo.toml
infra/src/: activity_log.rs  config.rs  db.rs  lib.rs
infra/src/common/: mod.rs  util.rs
infra/src/crypto/: key_derivation.rs  password_manager.rs  random_key.rs  verify.rs
infra/src/entity/: avatar.rs  deleted_repo.rs  invitation_code.rs  repo_member.rs  user.rs  user_contact.rs
infra/src/events/: mod.rs
infra/src/permission/: lock.rs  repo.rs
infra/src/rate_limit/: generic.rs
infra/src/serialization/: fs_json.rs  mod.rs  pack_fs.rs
infra/src/storage/: block_store.rs  cdc.rs  mod.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20260601_000001_create_users.rs  m20260601_000002_create_api_tokens.rs  m20260601_000003_create_repos.rs  m20260601_000004_create_repo_members.rs  m20260601_000005_create_commits.rs  m20260601_000006_create_fs_objects.rs  m20260601_000007_create_sync_tokens.rs  m20260601_000008_create_dir_entries.rs  m20260601_000009_create_user_2fa.rs  m20260601_000010_create_user_2fa_backup_codes.rs  m20260601_000011_create_share_links.rs  m20260601_000012_create_upload_links.rs  m20260603_000001_extend_schema.rs  m20260604_000001_create_activities.rs  m20260604_000002_create_wikis.rs  m20260604_000003_create_sdoc_comments.rs  m20260604_000004_create_metadata.rs  m20260605_000001_create_client_login_tokens.rs  m20260606_000001_store_json_in_fs_objects.rs  m20260607_000001_create_s2fa_tokens.rs  m20260607_000002_add_sync_token_peer_info.rs  m20260607_000003_create_invitation_codes.rs  m20260607_000004_add_invited_by_to_users.rs  m20260607_000005_create_password_reset_tokens.rs  m20260607_000006_add_is_admin_to_users.rs  m20260607_000007_add_email_to_invitation_codes.rs  m20260609_000001_create_file_lock_timestamps.rs  m20260614_000001_add_is_dir_to_starred_files.rs  m20260614_000002_add_old_path_to_activities.rs  m20260619_000001_add_share_link_fields.rs  m20260619_000003_add_detail_to_activities.rs  m20260619_000004_create_avatars.rs  m20260620_000001_create_file_trash.rs  m20260620_000002_create_deleted_repos.rs  m20260705_000001_add_storage_quota_to_users.rs
server/: Cargo.toml
server/src/: indexer.rs  lib.rs  main.rs  routes.rs  scheduler.rs  static_assets.rs  thumbnail_util.rs
server/src/auth/: access_token.rs  backup_codes.rs  csrf.rs  middleware.rs  mod.rs  password.rs  repo_extractor.rs  totp.rs
server/src/domain/: commit.rs  fs.rs  mod.rs  permission.rs
server/src/fs/: mod.rs
server/src/handler/: account.rs  activities.rs  async_batch.rs  avatar.rs  batch.rs  chunked_upload.rs  client_login.rs  device_wipe.rs  devices.rs  dir.rs  dir_v21.rs  exif.rs  file.rs  fileops.rs  groups.rs  history.rs  invitations.rs  links.rs  login.rs  metadata.rs  mod.rs  notification.rs  notifications.rs  password.rs  reindex.rs  repos.rs  search.rs  share.rs  smart_link.rs  sso.rs  starred.rs  thumbnail.rs  trash.rs  two_factor.rs  upload_link.rs  user_avatar.rs  users.rs  wiki.rs
server/src/middleware/: auth.rs  mod.rs  repo_extractor.rs
server/src/notification/: handler.rs  manager.rs
server/src/repo/: file_ops.rs  fs_tree.rs  gc.rs  mod.rs  size.rs  tree_diff.rs
server/src/repository/: activity.rs  api_token.rs  avatar.rs  client_login_token.rs  commit.rs  deleted_repo.rs  file_lock_timestamp.rs  file_tag.rs  file_trash.rs  fs_object.rs  group.rs  group_member.rs  invitation_code.rs  locked_file.rs  member.rs  metadata_config.rs  metadata_record.rs  mod.rs  password_reset_token.rs  repo.rs  s2fa_token.rs  sdoc_comment.rs  share_link.rs  sso_login_token.rs  starred.rs  sync_token.rs  thumbnail.rs  upload_link.rs  user.rs  user_2fa.rs  user_2fa_backup_code.rs  user_contact.rs  wiki.rs
server/src/sdoc/: mod.rs
server/src/service/: mod.rs  sdoc.rs
server/src/sync/: accessible_repos.rs  block.rs  commit.rs  folder_perm.rs  fs.rs  head_commits.rs  jwt_token.rs  lock.rs  permission.rs  quota.rs
server/src/ui/: activities.rs  adminshares.rs  admintasks.rs  auth.rs  auth_extractor.rs  client_login.rs  files.rs  invitations.rs  mod.rs  repos.rs  search.rs  settings.rs  shares.rs  starred.rs  sysadmin.rs  trash.rs  two_factor.rs
server/src/web/: download.rs  mod.rs  quota.rs  share_view.rs  temp_file.rs  upload.rs  upload_link_view.rs  zip_download.rs
server/static/css/: app.css  input.css
server/static/js/: file-browser.js  main.js
server/templates/: auth_base.html  base.html  search.html
server/templates/activities/: list.html
server/templates/adminshares/: list.html
server/templates/admintasks/: list.html
server/templates/files/: browser.html  browser_core.html  preview_image.html  preview_text.html
server/templates/includes/: alert_error.html  alert_info.html  alert_success.html  breadcrumb.html  file_list.html  left_panel.html  right_panel.html  sidebar.html  toolbar.html  topbar.html
server/templates/page/: error.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  register.html  two_factor_login.html
server/templates/repos/: list.html
server/templates/settings/: devices.html  index.html  invitations.html  two_factor.html
server/templates/shares/: list.html
server/templates/starred/: list.html
server/templates/sysadmin/: index.html
server/templates/trash/: list.html
server/templates/web/: share_access_validation.html  share_view.html  shared_dir_view.html  upload_link_view.html
server/tests/: account_test.rs  activity_test.rs  auth_test.rs  business_logic_test.rs  commit_test.rs  csrf_integration_test.rs  desktop_endpoints_test.rs  devices_test.rs  encrypted_repo_test.rs  fs_id_compat.rs  fs_test.rs  integration_test.rs  login_last_login_test.rs  notification_test.rs  quota_test.rs  share_link_test.rs  starred_test.rs  sync_flow_test.rs  sync_test.rs  ui_test.rs  upload_link_test.rs  zip_download_test.rs
src/: config.rs  (+8 more)
(+504 files in other folders)
