[package]
name = "nanofile"
version = "0.1.0"
edition = "2024"
description = "A Rust-based Seafile-compatible server"
license = "MIT"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8.9", features = ["multipart", "ws"] }
axum-extra = { version = "0.12.6", features = ["typed-header"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors", "trace", "limit", "normalize-path", "timeout"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"

sea-orm = { version = "1.1.20", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
] }
sea-orm-migration = { version = "1.1.20", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dotenvy = "0.15"

aes = "0.8"
cbc = "0.1"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["hmac"] }
cipher = { version = "0.4", features = ["block-padding", "alloc"] }
rand = "0.8"
hex = "0.4"
base64 = "0.22"

flate2 = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
anyhow = "1"
totp-rs = { version = "5.7", features = ["gen_secret", "otpauth"] }
qrcode = "0.14"
migration = { path = "migration" }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }
clap = { version = "4", features = ["derive"] }
rpassword = "7"
askama = { version = "0.13", features = ["serde_json"] }
rust-embed = "8"
serde_urlencoded = "0.7"
jsonwebtoken = "9"
multer = "3.1"
bytes = "1"
futures = "0.3"

# Full-text search
tantivy = "0.26.1"
tantivy-jieba = "0.20.0"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "multipart", "cookies"] }
tantivy = "0.26.1"
tempfile = "3"
tokio-tungstenite = "0.24"

[profile.release]
lto = true
codegen-units = 1
strip = true
