[package]
name = "infra"
version = "0.1.4"
edition = "2024"
description = "Infrastructure layer for nanofile — entities, storage, crypto, config"
license = "MIT"

[dependencies]
base = { path = "../base", features = ["with-sea-orm"] }

async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
anyhow = "1"
toml = "1.1"
dotenvy = "0.15"

sea-orm = { version = "1.1.20", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
] }

aes = "0.9"
cbc = "0.2"
sha1 = "0.11"
sha2 = "0.11"
hmac = "0.13"
pbkdf2 = { version = "0.13", features = ["hmac"] }
cipher = { version = "0.5", features = ["block-padding", "alloc"] }
rand = "0.10"
hex = "0.4"
subtle = "2"
base64 = "0.22"

flate2 = "1.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

