[package]
name = "migration"
version = "0.1.6"
edition = "2024"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
sea-orm-migration = { version = "1.1.20", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
tokio = { version = "1", features = ["full"] }
flate2 = "1.0"
